# msc

./: .gitignore  README.md  mods.md  pyproject.toml
msc/: __init__.py  cli.py  config.py  console.py  logs.py  mods.py  server.py
msc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
