[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msc"
version = "0.1.0"
description = "Minecraft Server CLI (MSC)"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["minecraft", "server", "cli", "typer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "typer[all]>=0.12,<0.13",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.3,<3",
  "mcrcon>=0.7.0",
  "rich>=13,<14",
  "click>=8.1.7,<8.2"
]
requires-python = ">=3.11"

[project.scripts]
msc = "msc.cli:app"
